--- a/index.html
+++ b/index.html
@@ -45,22 +45,28 @@
 						<div class="collapse navbar-collapse sub-menu-bar" id="navbarFive">
 							<ul class="navbar-nav ms-auto">
 								<li class="nav-item">
-									<a class="page-scroll active" href="#hero">Home</a>
+									<a class="page-scroll active" href="#components">Components</a>
 								</li>
 								<li class="nav-item">
 									<a class="page-scroll" href="#features">Objectives</a>
 								</li>
 								<li class="nav-item">
+									<a class="page-scroll" href="#DeeBoT">DeeBoT</a>
+								</li>
+								<li class="nav-item">
 									<a class="page-scroll" href="#whydbt">Why DBT?</a>
 								</li>
 								<li class="nav-item">
-									<a class="page-scroll" href="#about">About</a>
-								</li>
-								<li class="nav-item">
-									<a class="page-scroll" href="#DeeBot">DeeBoT</a>
+									<a class="page-scroll" href="#technology">Technology</a>
 								</li>
 								<li class="nav-item">
 									<a class="page-scroll" href="#team">Team</a>
+								</li>
+								<li class="nav-item">
+									<a class="page-scroll" href="#acknowledgements">Acknowledgements</a>
+								</li>
+								<li class="nav-item">
+									<a href="references.html">References</a>
 								</li>
 							</ul>
 						</div>
@@ -71,7 +77,9 @@
 	</section>
 
 	<section id="hero" class="header-area header-eleven">
-		<img class="shape" src="assets/images/header/img-wave.png" alt="#" />
+		<div class="shape">
+			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,128L30,122.7C60,117,120,107,180,112C240,117,300,139,360,170.7C420,203,480,245,540,250.7C600,256,660,224,720,192C780,160,840,128,900,144C960,160,1020,224,1080,229.3C1140,235,1200,181,1260,133.3C1320,85,1380,43,1410,21.3L1440,0L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"></path></svg>
+		</div>
 
 		<div class="header-inner">
 			<div class="container">
@@ -108,8 +116,42 @@
 			</div>
 		</div>
 	</section>
+	<section id="components" class="components-section">
+		<div class="container">
+			<div class="row align-items-stretch">
+				<h2 class="fw-bold">Components</h2>
+				<div class="col-lg-4 col-md-4 col-12">
+					<div class="features-style-twelve">
+						<div class="feature-icon">
+							<i class="lni lni-rocket"></i>
+						</div>
+						<h4>DeeBoT: an LLM skills trainer</h4>
+						<p class="proper-text">Amet atque nobis doloribus quas amet odio nemo veritatis a. Nisi corporis voluptates saepe ipsam reprehenderit Porro molestias autem consequuntur</p>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-4 col-12">
+					<div class="features-style-twelve">
+						<div class="feature-icon" >
+							<i class="lni lni-wechat"></i>
+						</div>
+						<h4>Conversation simulation</h4>
+						<p class="proper-text"> Amet nostrum reprehenderit rem vel dolor voluptas nisi In labore veniam reiciendis eos recusandae Cupiditate minima sequi autem tempore dignissimos. </p>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-4 col-12">
+					<div class="features-style-twelve">
+						<div class="feature-icon">
+							<i class="lni lni-layers"></i>
+						</div>
+						<h4>Evaluation</h4>
+						<p class="proper-text">Ipsum similique sed vero id dolore Similique eos repellendus velit hic asperiores? Assumenda dolorum explicabo nihil quidem voluptatibus. Obcaecati saepe?</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
-	<section id="features" class="features-area features-twelve">
+	<section data-id="objectives" id="features" class="features-area features-twelve">
 		<div class="section-title-two">
 			<div class="container">
 				<div class="row">
@@ -179,6 +221,39 @@
 		</div>
 	</section>
 
+	<section id="DeeBoT" class="about-us about-eight">
+		<div class="container">
+			<div class="row align-items-center">
+				<div class="col-lg-6 col-12">
+					<div class="content">
+						<div class="icon">
+							<i class="lni lni-grid-alt"></i>
+						</div>
+						<h3 class="fw-bold"> DeeBoT: an DBT Skills Training expert </h3>
+						<p>
+							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+							nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+							officia deserunt.
+						</p>
+						<p>
+							There are many variations of passages of Lorem Ipsum available, but the majority have
+							suffered alteration in some form, by injected humour, or randomised words which don't
+							look even slightly believable.
+						</p>
+						<p><span class="fw-bold">Your data is safe.</span> DeeBoT does not store or collect user data and we do not train any models based on user data.</p>
+						<div class="action-btn rounded-buttons">
+							<a href="https://berkeley-dbt.azurewebsites.net/" target="_blank" rel="noopener noreferer" class="btn primary-btn rounded-full">Try DeeBoT</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-6 col-12">
+					<div class="right">
+						<img src="assets/images/header/app-overview.png" alt="Image contains a screenshot of DeeBot, a chatbot specialised in DBT Skills Training" />
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	<section id="whydbt" class="whydbt-section">
 		<div class="container">
 			<div class="row">
@@ -195,178 +270,40 @@
 		</div>
 
 	</section>
-	<section id="about" class="about-us about-eight">
+
+
+
+	<section id="technology" class="call-action-area call-action-three technology-section">
 		<div class="container">
 			<div class="row align-items-center">
-				<div class="col-lg-6 col-12">
-					<div class="content">
-						<div class="icon">
-							<i class="lni lni-grid-alt"></i>
-						</div>
-						<h3 class="fw-bold">
-							We have powerfull dashbord<br />
-							that help check your daily status
-						</h3>
-						<p>
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-							nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-							officia deserunt.
-						</p>
-						<p>
-							There are many variations of passages of Lorem Ipsum available, but the majority have
-							suffered alteration in some form, by injected humour, or randomised words which don't
-							look even slightly believable.
-						</p>
-						<div class="light-rounded-buttons">
-							<a href="javascript:void(0)" class="btn primary-btn-outline">Try a demo</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-6 col-12">
-					<div class="right">
-						<img src="assets/images/about/app-image.jpg" alt="image" />
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section class="video-area video-one">
-		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-lg-6 col-md-10">
-					<div class="video-title text-center">
-						<h5>Promo Video</h5>
-						<h2>Watch Our App Features</h2>
-						<p class="text-lg">
-							Firsthand accounts from leaders who have changed the world we live in and the
-							entrepreneurs shaping tomorrow’s world.
-						</p>
-					</div>
-				</div>
-			</div>
-
-			<div class="row justify-content-center">
-				<div class="col-lg-10">
-					<div class="video-content text-center">
-						<img src="assets/images/video/video-bg.jpg" alt="Video" />
-						<a class="video-popup glightbox" href="https://www.youtube.com/watch?v=NJbXptdalP0">
-							<i class="lni lni-play"></i>
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section class="slider-seven">
-		<div class="section-title-two">
-			<div class="container">
-				<div class="row">
-					<div class="col-12">
-						<div class="content">
-							<span>Screenshots</span>
-							<h2 class="fw-bold">App Screenshorts</h2>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmod tempor
-								incididunt ut labore aliqua.
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="container">
-			<div class="slider-items-three-wrapper">
-				<div class="row slider-items-three-active">
-					<div class="col-lg-4">
-						<div class="single-items-three">
-							<div class="items-image">
-								<img src="assets/images/screenshorts/image1.png" alt="Image" />
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4">
-						<div class="single-items-three">
-							<div class="items-image">
-								<img src="assets/images/screenshorts/image2.png" alt="Image" />
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4">
-						<div class="single-items-three">
-							<div class="items-image">
-								<img src="assets/images/screenshorts/image3.png" alt="Image" />
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4">
-						<div class="single-items-three">
-							<div class="items-image">
-								<img src="assets/images/screenshorts/image4.png" alt="Image" />
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4">
-						<div class="single-items-three">
-							<div class="items-image">
-								<img src="assets/images/screenshorts/image5.png" alt="Image" />
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4">
-						<div class="single-items-three">
-							<div class="items-image">
-								<img src="assets/images/screenshorts/image6.png" alt="Image" />
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4">
-						<div class="single-items-three">
-							<div class="items-image">
-								<img src="assets/images/screenshorts/image7.png" alt="Image" />
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4">
-						<div class="single-items-three">
-							<div class="items-image">
-								<img src="assets/images/screenshorts/image3.png" alt="Image" />
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4">
-						<div class="single-items-three">
-							<div class="items-image">
-								<img src="assets/images/screenshorts/image4.png" alt="Image" />
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section class="call-action-area call-action-three">
-		<div class="container">
-			<div class="row align-items-center">
-				<div class="col-xl-5 col-lg-6">
+				<div class="col-lg-6">
 					<div class="call-action-content">
-						<h2 class="action-title">Download now and start your using our app.</h2>
+						<h2 class="action-title">Technology &amp; architecture</h2>
 						<p class="text">
 							There are many variations of passages of Lorem Ipsum available, but the majority have
 							alteration.
 						</p>
-						<div class="action-btn rounded-buttons">
-							<a href="#0" class="btn primary-btn rounded-full"> Download Now </a>
-						</div>
+						<h4>Conversation generation</h4>
+						<p class="text">Consectetur harum eius ea soluta eaque sunt! Laudantium voluptates aspernatur id dignissimos quis optio? Libero excepturi hic porro obcaecati harum alias, ipsam. Veniam reprehenderit ex sequi corrupti corrupti. Minima maiores quibusdam quasi hic explicabo Aliquid iste est qui facilis tenetur.</p>
+						<h4>Evaluation</h4>
+						<p class="text">
+							Sit sunt sed architecto aliquam nesciunt. Hic est excepturi ipsam soluta minima Eveniet aspernatur rem expedita impedit cumque, explicabo ab! Quaerat molestiae quo enim temporibus illo Quaerat dignissimos expedita libero enim praesentium quam Tempora sed amet dolorum quibusdam consequatur. Nesciunt itaque veniam natus veniam minima molestiae illum atque Consequuntur sequi sapiente tempore distinctio ex! Repellat quam eveniet cupiditate
+						</p>
 					</div>
 				</div>
-				<div class="col-xl-5 col-lg-6 offset-xl-2">
-					<div class="call-action-content">
-						<img src="assets/images/call-action/cta-03.svg" alt="call to action" />
-					</div>
+				<div class="col-lg-6" style="padding-left: 50px">
+					<pre class="mermaid">
+						graph TD
+							A["DBT Skills Trainer System Prompt"] --> B["DBT Skills Trainer"]
+							B --> C["OpenAI GPT-4"]
+							C -->|Conversation generation|D["Synthetic Conversation"]
+							D --> I{Evaluation}
+							I --> E["DBT Adherence Checklist"]
+							I --> F["DBT Skill Extraction"]
+							G["Patient Bot System Prompt"] --> H["Patient Bot"]
+							H --> C
+							%% linkStyle 3 stroke:#ff3,stroke-width:4px,color:red;
+					</pre>
 				</div>
 			</div>
 		</div>
@@ -467,7 +404,7 @@ C68.8,31.2,70,32.5,70,34.1L70,34.1z"
 							<div class="social-links">
 								<ul class="social">
 									<li>
-										<a href="javascript:void(0)"> <i class="lni lni-facebook-filled"></i> </a>
+										<a href="javascript:void(0)"> <i class="lni lni-github-original"></i> </a>
 									</li>
 									<li>
 										<a href="javascript:void(0)">
@@ -477,11 +414,6 @@ C68.8,31.2,70,32.5,70,34.1L70,34.1z"
 									<li>
 										<a href="javascript:void(0)">
 											<i class="lni lni-linkedin-original"></i>
-										</a>
-									</li>
-									<li>
-										<a href="javascript:void(0)">
-											<i class="lni lni-behance-original"></i>
 										</a>
 									</li>
 								</ul>
@@ -565,7 +497,7 @@ C68.8,31.2,70,32.5,70,34.1L70,34.1z"
 							<div class="social-links">
 								<ul class="social">
 									<li>
-										<a href="javascript:void(0)"> <i class="lni lni-facebook-filled"></i> </a>
+										<a href="javascript:void(0)"> <i class="lni lni-github-original"></i> </a>
 									</li>
 									<li>
 										<a href="javascript:void(0)">
@@ -575,11 +507,6 @@ C68.8,31.2,70,32.5,70,34.1L70,34.1z"
 									<li>
 										<a href="javascript:void(0)">
 											<i class="lni lni-linkedin-original"></i>
-										</a>
-									</li>
-									<li>
-										<a href="javascript:void(0)">
-											<i class="lni lni-behance-original"></i>
 										</a>
 									</li>
 								</ul>
@@ -663,7 +590,7 @@ C68.8,31.2,70,32.5,70,34.1L70,34.1z"
 							<div class="social-links">
 								<ul class="social">
 									<li>
-										<a href="javascript:void(0)"> <i class="lni lni-facebook-filled"></i> </a>
+										<a href="javascript:void(0)"> <i class="lni lni-github-original"></i> </a>
 									</li>
 									<li>
 										<a href="javascript:void(0)">
@@ -673,11 +600,6 @@ C68.8,31.2,70,32.5,70,34.1L70,34.1z"
 									<li>
 										<a href="javascript:void(0)">
 											<i class="lni lni-linkedin-original"></i>
-										</a>
-									</li>
-									<li>
-										<a href="javascript:void(0)">
-											<i class="lni lni-behance-original"></i>
 										</a>
 									</li>
 								</ul>
@@ -761,7 +683,7 @@ C68.8,31.2,70,32.5,70,34.1L70,34.1z"
 							<div class="social-links">
 								<ul class="social">
 									<li>
-										<a href="javascript:void(0)"> <i class="lni lni-facebook-filled"></i> </a>
+										<a href="javascript:void(0)"> <i class="lni lni-github-original"></i> </a>
 									</li>
 									<li>
 										<a href="javascript:void(0)">
@@ -773,11 +695,6 @@ C68.8,31.2,70,32.5,70,34.1L70,34.1z"
 											<i class="lni lni-linkedin-original"></i>
 										</a>
 									</li>
-									<li>
-										<a href="javascript:void(0)">
-											<i class="lni lni-behance-original"></i>
-										</a>
-									</li>
 								</ul>
 							</div>
 						</div>
@@ -786,9 +703,27 @@ C68.8,31.2,70,32.5,70,34.1L70,34.1z"
 			</div>
 		</div>
 	</section>
+	<section id="acknowledgements" class="acknowledgements-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<h2 class="fw-bold">Acknowledgements</h2>
+
+					<p>We are indebted to the following people for their support throughout the ideation, investigation, and development phase of our project:</p>
+					<ul class="proper-text">
+						<li>Joyce Shen: capstone leader</li>
+						<li>Todd Halloway: capstone leader</li>
+						<li>Inna Lin: PhD candidate at the University of Washington's Behavioral Research Lab for her technological expertise in behavioural LLM implementation in the mental health/DBT space.</li>
+						<li>Chris Hadfield: founder of the Wise Mind Institute for his consultation and expertise on clinical delivery and Dialectical Behavioral Therapy</li>
+					</ul>
+				</div>
+
+			</div>
+		</div>
+	</section>
 
 	<footer class="footer-area footer-six">
-		<div class="footer-widget">
+		<div class="footer-widget" hidden>
 			<div class="container">
 				<div class="row">
 					<div class="col-xl-4 col-lg-4 col-sm-12">
@@ -901,47 +836,22 @@ C68.8,31.2,70,32.5,70,34.1L70,34.1z"
 	</a>
 
 	<script src="assets/js/bootstrap.bundle.min.js"></script>
-	<script src="assets/js/glightbox.min.js"></script>
-	<script src="assets/js/tiny-slider.js"></script>
+	<!-- <script src="assets/js/glightbox.min.js"></script> -->
+	<!-- <script src="assets/js/tiny-slider.js"></script> -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/10.9.0/mermaid.min.js"></script>
 	<script src="assets/js/main.js"></script>
 	<script>
-		//========= glightbox
-		GLightbox({
-			href: "https://www.youtube.com/watch?v=r44RKWyfcFw&fbclid=IwAR21beSJORalzmzokxDRcGfkZA1AtRTE__l5N4r09HcGS5Y6vOluyouM9EM",
-			type: "video",
-			source: "youtube", //vimeo, youtube or local
-			width: 900,
-			autoplayVideos: true,
-		});
 
-		//======== Screenshorts Slider
-		tns({
-			autoplay: true,
-			autoplayButtonOutput: false,
-			mouseDrag: true,
-			gutter: 0,
-			container: ".slider-items-three-active",
-			center: false,
-			nav: true,
-			navPosition: "bottom",
-			speed: 400,
-			controlsText: ['<i class="lni lni-arrow-left"></i>', '<i class="lni lni-arrow-right"></i>'],
-			responsive: {
-				0: {
-					items: 1,
-					controls: false,
-				},
-
-				768: {
-					items: 3,
-					controls: true,
-				},
-				992: {
-					items: 4,
-					controls: false,
-				},
+		const config = {
+			startOnLoad: true,
+			flowchart: { useMaxWidth: true, htmlLabels: true, curve: 'cardinal' },
+			theme: 'forest',
+			themeVariables: {
+				fontFamily: 'Inter'
 			},
-		});
+			securityLevel: 'loose',
+		};
+		mermaid.initialize(config);
 	</script>
 </body>
 </html>
