--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
 
 	<link rel="stylesheet" href="assets/css/lineicons.css" />
 
-	<link rel="stylesheet" href="assets/css/tiny-slider.css" />
-
-	<link rel="stylesheet" href="assets/css/glightbox.min.css" />
-	<link rel="stylesheet" href="style.scss" />
+	<link rel="stylesheet" href="style.css" />
 </head>
 <body>
 	<section class="navbar-area navbar-five">
