--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
 	<link rel="stylesheet" href="assets/css/lineicons.css" />
 
-	<link rel="stylesheet" href="style.css" />
+
+	<link rel="stylesheet" href="style.scss" />
 </head>
 <body>
 	<section class="navbar-area navbar-five">
@@ -259,8 +260,9 @@
 				</div>
 				<div class="col-6">
 					<div class="proper-text">
-						<p>Adipisicing a quod repudiandae at neque dolorum Recusandae asperiores id laudantium laudantium tempore qui? Debitis debitis maxime sapiente est odit asperiores distinctio Harum placeat numquam necessitatibus voluptatum illum? Asperiores atque reiciendis illo dolor ullam Officiis aut consequatur culpa nostrum laboriosam!</p><p> Qui reiciendis voluptate fuga ut natus? Architecto nemo dolorem expedita assumenda dolorum assumenda? Consequatur totam amet error quae eligendi. Modi ex ea quidem blanditiis eius Possimus corporis deleniti sequi adipisci explicabo Repellat dolor velit enim est sint, fugiat? Dolorum vitae quae ad animi maxime Molestiae eos fuga fugiat facere aliquid voluptas. Omnis id quod iusto asperiores corrupti Nihil quibusdam quod.</p>
-						<p>Consectetur rem eius similique repellendus magni Eligendi eaque quos id illo nulla rerum. Inventore quasi excepturi quidem minus maxime corporis? Quod culpa quaerat maiores corrupti aspernatur. Unde numquam facere iure dicta mollitia numquam? Officiis sed excepturi ipsa possimus expedita? Reprehenderit quos perspiciatis sit iusto beatae eos tenetur Sapiente laudantium eos?</p>
+						<p>Dialectical Behavioral Therapy (DBT) is one of the most studied and evidenced-based psycho-therapies available in the market today. Developed at the University of Washington, it is routinely used to treat patients dealing with anxiety, depression, suicidal ideation, and personality disorders with very high rates of success. It has 3 main components: individual therapy, skills training, and phone coaching. The skills training component in DBT is unique to it and has been designed in such a way that it can be delivered independent of the psychotherapy component with great success. </p>
+
+						<p>The DBT Skills training module is particularly well-suited to be delivered via a chatbot-like experience due to its structured nature and focus on skill-building through repetitive practice. These skills, categorized into mindfulness, distress tolerance, emotion regulation, and interpersonal effectiveness, lend themselves well to the algorithmic format of a chatbot, which can provide reminders, guided activities, and simulations at scale. A chatbot can deliver interactive exercises and provide consistency in practice without the immediate need for a trained clinician. This approach allows users to access therapeutic tools at any time, making it a flexible solution that can complement individual therapy sessions or serve as a preliminary step toward formal care. Furthermore, the personalized feedback and privacy afforded by a chatbot can foster a safe environment for users to practice new skills without fear of judgment.</p>
 					</div>
 				</div>
 			</div>
@@ -711,7 +713,7 @@ C68.8,31.2,70,32.5,70,34.1L70,34.1z"
 						<li>Joyce Shen: capstone leader</li>
 						<li>Todd Halloway: capstone leader</li>
 						<li>Inna Lin: PhD candidate at the University of Washington's Behavioral Research Lab for her technological expertise in behavioural LLM implementation in the mental health/DBT space.</li>
-						<li>Chris Hadfield: founder of the Wise Mind Institute for his consultation and expertise on clinical delivery and Dialectical Behavioral Therapy</li>
+						<li>Chris Harrison: founder of the Wise Mind Institute for his consultation and expertise on clinical delivery and Dialectical Behavioral Therapy</li>
 					</ul>
 				</div>
 
