--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="assets/css/lineicons.css" />
 
 
-	<link rel="stylesheet" href="style.scss" />
+	<link rel="stylesheet" href="style.css" />
 </head>
 <body>
 	<section class="navbar-area navbar-five">
