--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 						<div class="hero-brand">
 							<img class="hero-logo" src="assets/images/stones.svg" alt="Logo" />
 							<h1 class="hero-text">BerkeleyDBT</h1>
-							<p class="hero-tagline">Adipisicing obcaecati cumque non qui laboriosam. Dicta distinctio consequuntur laborum?</p>
+							<p class="hero-tagline"> Pioneering the future of mental health virtual assistants </p>
 						</div>
 					</div>
 					<div class="col-lg-6 col-12" hidden>
