fill in site content, add linkedin and GH links, minor formatting/spelling changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 	<link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.svg" />
 
-	<title>BerkeleyDBT</title>
+	<title>Berkeley DBT</title>
 
 	<!-- <link rel="shortcut icon" href="../assets/images/favicon.svg" type="image/svg" /> -->
 
@@ -85,14 +85,14 @@
 					<div class="col-12">
 						<div class="hero-brand">
 							<img class="hero-logo" src="assets/images/stones.svg" alt="Logo" />
-							<h1 class="hero-text">BerkeleyDBT</h1>
+							<h1 class="hero-text">Berkeley DBT</h1>
 							<p class="hero-tagline"> Pioneering the future of mental health virtual assistants </p>
 						</div>
 					</div>
 					<div class="col-lg-6 col-12" hidden>
 						<div class="home-slider">
 							<div class="header-text">
-								<h1>Achieve wise mind with DBoT, powered by GPT</h1>
+								<h1>Achieve wise mind with DeeBoT, powered by GPT</h1>
 								<p>
 									Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
 									Ipsum has been the industry's standard dummy text ever since.
@@ -132,7 +132,7 @@
 						<div class="feature-icon" >
 							<i class="lni lni-wechat"></i>
 						</div>
-						<h4>Conversation simulation</h4>
+						<h4>Conversation Simulation</h4>
 						<p class="proper-text"> Amet nostrum reprehenderit rem vel dolor voluptas nisi In labore veniam reiciendis eos recusandae Cupiditate minima sequi autem tempore dignissimos. </p>
 					</div>
 				</div>
@@ -171,9 +171,10 @@
 						<div class="feature-icon" hidden>
 							<i class="lni lni-rocket"></i>
 						</div>
-						<h4>Cutting-edge technology</h4>
+						<h4>Cutting-Edge Technology</h4>
 						<ul class="proper-text">
 							<li>Construct a learning-based machine that can intelligently discuss DBT concepts and guide users through the fundamental DBT skills such as mindfulness, distress tolerance, emotional regulation, and interpersonal effectiveness.</li>
+							<br>
 							<li>Ensure that the chatbot simulates a thoughtful and empathetic conversation style, reflective of therapeutic interactions but clear in its role as a support tool rather than a therapist replacement.</li>
 						</ul>
 					</div>
@@ -183,10 +184,10 @@
 						<div class="feature-icon" hidden>
 							<i class="lni lni-wechat"></i>
 						</div>
-						<h4>Simulation &amp; evaluation</h4>
+						<h4>Simulation &amp; Evaluation</h4>
 						<ul class="proper-text">
-
 							<li> Develop tools that simulate conversations to train and fine-tune the chatbot, ensuring that the guidance it provides aligns accurately with established DBT protocols.</li>
+							<br>
 							<li>Implement rigorous evaluation metrics to measure the chatbot’s accuracy in recommending DBT skills and its consistency in adhering to the precise standards of DBT, safeguarding both efficacy and safety in user interactions.</li>
 						</ul>
 					</div>
@@ -199,6 +200,7 @@
 						<h4>Accessibility</h4>
 						<ul class="proper-text">
 							<li>Address the prevalent challenge in the accessibility of mental health resources by providing a supplementary tool that users can access discreetly and conveniently from their digital devices.</li>
+							<br>
 							<li> Assist both individuals in need of mental health support and providers by offering a readily available resource that helps in understanding and practicing DBT skills, thereby acting as a bridging tool until direct therapist interaction is possible or alongside ongoing therapy.</li>
 						</ul>
 					</div>
@@ -208,9 +210,10 @@
 						<div class="feature-icon" hidden>
 							<i class="lni lni-timer"></i>
 						</div>
-						<h4>Ethics &amp; safety</h4>
+						<h4>Ethics &amp; Safety</h4>
 						<ul class="proper-text">
 							<li>Clearly communicate the chatbot’s intended use as a non-therapeutic tool that provides educational content and guidance on DBT, and not as a replacement for professional mental health treatment.</li>
+							<br>
 							<li>Emphasize on safeguarding user data and ensuring the ethical use of conversational AI in a sensitive domain like mental health education.</li>
 						</ul>
 					</div>
@@ -257,13 +260,17 @@
 			<div class="row">
 				<div class="col-6 row align-items-center ">
 					<h2 class="fw-bold">Why DBT?</h2>
+					<img src="assets/images/diagrams/dbt_overview.png" alt="Image contains an overview of Dialectical Behavioral Therapy" />
 				</div>
 				<div class="col-6">
-					<div class="proper-text">
-						<p>Dialectical Behavioral Therapy (DBT) is one of the most studied and evidenced-based psycho-therapies available in the market today. Developed at the University of Washington, it is routinely used to treat patients dealing with anxiety, depression, suicidal ideation, and personality disorders with very high rates of success. It has 3 main components: individual therapy, skills training, and phone coaching. The skills training component in DBT is unique to it and has been designed in such a way that it can be delivered independent of the psychotherapy component with great success. </p>
-
-						<p>The DBT Skills training module is particularly well-suited to be delivered via a chatbot-like experience due to its structured nature and focus on skill-building through repetitive practice. These skills, categorized into mindfulness, distress tolerance, emotion regulation, and interpersonal effectiveness, lend themselves well to the algorithmic format of a chatbot, which can provide reminders, guided activities, and simulations at scale. A chatbot can deliver interactive exercises and provide consistency in practice without the immediate need for a trained clinician. This approach allows users to access therapeutic tools at any time, making it a flexible solution that can complement individual therapy sessions or serve as a preliminary step toward formal care. Furthermore, the personalized feedback and privacy afforded by a chatbot can foster a safe environment for users to practice new skills without fear of judgment.</p>
-					</div>
+					<h4 class="fw-bold">Proven Effectiveness</h4>
+					<p class="text">Dialectical Behavioral Therapy (DBT) is a highly researched and effective form of psychotherapy pioneered at the University of Washington. It is routinely used to treat patients dealing with anxiety, depression, suicidal ideation, and personality disorders with very high rates of success. It has 3 main components: individual therapy, skills training, and phone coaching. Notably, its skills training component is unique to DBT, and can be effectively implemented independently of other therapy elements. </p>
+					<br>
+					<h4 class="fw-bold">Chatbot Adaptable</h4>
+					<p class="text">DBT skills training is particularly well-suited to be delivered via a chatbot-like experience due to its structured nature and focus on skill-building through repetitive practice. These skills, categorized into mindfulness, distress tolerance, emotion regulation, and interpersonal effectiveness, lend themselves well to the algorithmic format of a chatbot, which can provide reminders, guided activities, and simulations at scale. A chatbot can deliver interactive exercises and provide consistency in practice without the immediate need for a trained clinician. </p>
+					<br>
+					<h4 class="fw-bold">On-Demand Mastery</h4>
+					<p class="text">This approach allows users to access therapeutic tools at any time, making it a flexible solution that can complement individual therapy sessions or serve as a preliminary step toward formal care. Furthermore, the personalized feedback and privacy afforded by a chatbot can foster a safe environment for users to practice new skills without fear of judgment.</p>
 				</div>
 			</div>
 		</div>
@@ -277,13 +284,15 @@
 			<div class="row align-items-center">
 				<div class="col-lg-6">
 					<div class="call-action-content">
-						<h2 class="action-title">Technology &amp; architecture</h2>
+						<h2 class="action-title">Technology &amp; Architecture</h2>
 						<p class="text">
-							There are many variations of passages of Lorem Ipsum available, but the majority have
-							alteration.
+							Let's explore how we developed Berkeley DBT into a comprehensive platform for end-to-end DBT chatbot performance testing.
 						</p>
-						<h4>Conversation generation</h4>
-						<p class="text">Consectetur harum eius ea soluta eaque sunt! Laudantium voluptates aspernatur id dignissimos quis optio? Libero excepturi hic porro obcaecati harum alias, ipsam. Veniam reprehenderit ex sequi corrupti corrupti. Minima maiores quibusdam quasi hic explicabo Aliquid iste est qui facilis tenetur.</p>
+						<h4>Conversation Generation</h4>
+						<p class="text">At the core of DBT skills training, interaction between a competent trainer and an enthusiastic learner is crucial. We replicate this dynamic duo with two advanced AI constructs: a DBT Skills Trainer Bot and a Patient Bot.</p>
+						<p class="text">Our DBT Skills Trainer Bot utilizes system prompting to condition GPT-4 into delivering contextually and stylistically appropriate responses. With careful prompt tuning, it can be made to open conversations with a warm greeting, probe the user's current emotional state, select a relevant DBT skill to teach based on the user's immediate needs, and beyond.</p>
+						<p class="text">Complementing this, our Patient Bot simulates the learner's role. It begins each session with one of 81 pre-written starting messages describing various real-life challenges relevant to DBT. Via system prompting, GPT-4 is directed to generate new responses from the same perspective.</p>
+						<p class="text">Together, these two bots engage in a simulated multi-turn conversation before the resulting synthetic conversations are passed through our evaluation process.
 						<h4>Evaluation</h4>
 						<p class="text">
 							Sit sunt sed architecto aliquam nesciunt. Hic est excepturi ipsam soluta minima Eveniet aspernatur rem expedita impedit cumque, explicabo ab! Quaerat molestiae quo enim temporibus illo Quaerat dignissimos expedita libero enim praesentium quam Tempora sed amet dolorum quibusdam consequatur. Nesciunt itaque veniam natus veniam minima molestiae illum atque Consequuntur sequi sapiente tempore distinctio ex! Repellat quam eveniet cupiditate
@@ -314,12 +323,11 @@
 				<div class="row">
 					<div class="col-12">
 						<div class="content">
-							<span>Our Team</span>
-							<h2 class="fw-bold">Our team</h2>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmod tempor
-								incididunt ut labore aliqua.
-							</p>
+							<span>Team</span>
+						</div>
+						<br>
+						<div>
+							<h3 class="fw-bold">Meet the team of MIDS capstone students who made Berkeley DBT a reality!</h3>
 						</div>
 					</div>
 				</div>
@@ -403,7 +411,7 @@ C68.8,31.2,70,32.5,70,34.1L70,34.1z"
 							<div class="social-links">
 								<ul class="social">
 									<li>
-										<a href="javascript:void(0)"> <i class="lni lni-github-original"></i> </a>
+										<a href="https://github.com/roberthenrymueller"> <i class="lni lni-github-original"></i> </a>
 									</li>
 									<li>
 										<a href="javascript:void(0)">
@@ -411,7 +419,7 @@ C68.8,31.2,70,32.5,70,34.1L70,34.1z"
 										</a>
 									</li>
 									<li>
-										<a href="javascript:void(0)">
+										<a href="https://www.linkedin.com/in/robert-mueller/">
 											<i class="lni lni-linkedin-original"></i>
 										</a>
 									</li>
@@ -496,7 +504,7 @@ C68.8,31.2,70,32.5,70,34.1L70,34.1z"
 							<div class="social-links">
 								<ul class="social">
 									<li>
-										<a href="javascript:void(0)"> <i class="lni lni-github-original"></i> </a>
+										<a href="https://github.com/hecerinc"> <i class="lni lni-github-original"></i> </a>
 									</li>
 									<li>
 										<a href="javascript:void(0)">
@@ -504,7 +512,7 @@ C68.8,31.2,70,32.5,70,34.1L70,34.1z"
 										</a>
 									</li>
 									<li>
-										<a href="javascript:void(0)">
+										<a href="https://www.linkedin.com/in/h%C3%A9ctor-rinc%C3%B3n-40a36949/">
 											<i class="lni lni-linkedin-original"></i>
 										</a>
 									</li>
@@ -583,21 +591,16 @@ C68.8,31.2,70,32.5,70,34.1L70,34.1z"
 						<div class="info-head">
 							<div class="info-box">
 								<h4 class="name">Andrew Loeber</h4>
-								<span class="designation">Technology lead</span>
+								<span class="designation">Technology Lead</span>
 							</div>
 
 							<div class="social-links">
 								<ul class="social">
 									<li>
-										<a href="javascript:void(0)"> <i class="lni lni-github-original"></i> </a>
+										<a href="https://github.com/andrew-loeber"> <i class="lni lni-github-original"></i> </a>
 									</li>
 									<li>
-										<a href="javascript:void(0)">
-											<i class="lni lni-twitter-original"></i>
-										</a>
-									</li>
-									<li>
-										<a href="javascript:void(0)">
+										<a href="https://www.linkedin.com/in/andrew-loeber/">
 											<i class="lni lni-linkedin-original"></i>
 										</a>
 									</li>
@@ -676,13 +679,13 @@ C68.8,31.2,70,32.5,70,34.1L70,34.1z"
 						<div class="info-head">
 							<div class="info-box">
 								<h4 class="name">John Van</h4>
-								<span class="designation">Performance lead</span>
+								<span class="designation">Performance Lead</span>
 							</div>
 
 							<div class="social-links">
 								<ul class="social">
 									<li>
-										<a href="javascript:void(0)"> <i class="lni lni-github-original"></i> </a>
+										<a href="https://github.com/JohnVan1"> <i class="lni lni-github-original"></i> </a>
 									</li>
 									<li>
 										<a href="javascript:void(0)">
@@ -690,7 +693,7 @@ C68.8,31.2,70,32.5,70,34.1L70,34.1z"
 										</a>
 									</li>
 									<li>
-										<a href="javascript:void(0)">
+										<a href="https://www.linkedin.com/in/johnvan1/">
 											<i class="lni lni-linkedin-original"></i>
 										</a>
 									</li>
@@ -708,12 +711,12 @@ C68.8,31.2,70,32.5,70,34.1L70,34.1z"
 				<div class="col-12">
 					<h2 class="fw-bold">Acknowledgements</h2>
 
-					<p>We are indebted to the following people for their support throughout the ideation, investigation, and development phase of our project:</p>
+					<p>We extend our deepest gratitude to the individuals who supported us during the ideation, investigation, and development stages of our project:</p>
 					<ul class="proper-text">
-						<li>Joyce Shen: capstone leader</li>
-						<li>Todd Halloway: capstone leader</li>
-						<li>Inna Lin: PhD candidate at the University of Washington's Behavioral Research Lab for her technological expertise in behavioural LLM implementation in the mental health/DBT space.</li>
-						<li>Chris Harrison: founder of the Wise Mind Institute for his consultation and expertise on clinical delivery and Dialectical Behavioral Therapy</li>
+						<li>Joyce Shen: MIDS Capstone Instructor</li>
+						<li>Todd Holloway: MIDS Capstone Instructor</li>
+						<li>Inna Lin: PhD candidate at the University of Washington's Behavioral Research Lab, consulted for her expertise on behavioural LLM implementation in the mental health/DBT space.</li>
+						<li>Dr. Chris Harrison: founder of the Wise Mind Institute, consulted for his expertise on clinical delivery and Dialectical Behavioral Therapy</li>
 					</ul>
 				</div>
 
